# NerMCManager

./: .gitignore  LICENSE  README.md  meson.build
docs/: Database.md  Terms.md  Usage.md  Workflow.md  nermcmanager.md
src/backend/: backend.cpp  backend.h  backend_config.cpp  backend_config.h  backend_dir.cpp  backend_ep.cpp  config.cpp  config.h  dirhash.cpp  dirhash.h  main.cpp
src/backend/database/: init_db.cpp  init_db.h
src/backend/env_pack/: ep.cpp  ep.h  ep_config.cpp  ep_config.h
src/backend/protocol/: README.md  client_bound.h  connector.cpp  connector.h
src/backend/server/: README.md  server.cpp  server.h
src/backend/system_test/: test_mount.cpp
src/backend/wd/: wd.cpp  wd.h
src/cli/: README.md  debug_client_main.cpp  main.cpp  sender.cpp  sender.h
src/cli/command/: ep_command.cpp  ep_command.h  gi_command.cpp  gi_command.h  wd_command.cpp  wd_command.h
src/common/: json_file.cpp  json_file.h  json_parser.cpp  json_parser.h  variables.cpp  variables.h
